Avoid the function name thread_init.

* agent/gpg-agent.c (thread_init_once): Rename to ...
(agent_thread_init_once): this.
* kbx/keyboxd.c (thread_init_once): Rename to ...
(keyboxd_thread_init_once): this.
* dirmngr/dirmngr.c (thread_init): Rename to ...
(dirmngr_thread_init): this.
--

thread_init conflicts the AIX declared thread_init.  thread_init_once
would not be a problem but we better also rename it.

GnuPG-bug-id: 7958