dirmngr/dirmngr.c
@@ -1002,7 +1002,7 @@ my_ntbtls_log_handler (void *opaque, int level, const char *fmt, va_list argv)
 
 /* Helper for initialize_modules.  */
 static void
-thread_init (void)
+dirmngr_thread_init (void)
 {
   static int npth_initialized = 0;
 
@@ -1034,7 +1034,7 @@ thread_init (void)
 static void
 initialize_modules (void)
 {
-  thread_init ();
+  dirmngr_thread_init ();
   cert_cache_init (hkp_cacert_filenames);
   crl_cache_init ();
   ks_hkp_init ();
